# django_basics

./: README.md  catalog.html  category.html  contacts.html  main_page.html  pyproject.toml  requirements.txt
catalog/: urls.py  views.py
catalog/templates/: contacts.html  home.html
config/: settings.py
src/: web.py
