[project]
name = "django-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "django (>=5.2.7,<6.0.0)"
]

[tool.poetry]
packages = [{include = "django_basics", from = "src"}]


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
flake8 = "^7.3.0"


[tool.poetry.group.lint.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"
isort = "^6.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
